--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^1.0.4
   freezed_annotation: ^2.1.0
-  json_annotation: ^4.6.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -113,7 +113,7 @@ flutter_native_splash:
     image: 'assets/images/splash_android12.png'
     icon_background_color_dark: '#262626'
     image_dark: 'assets/images/splash_android12.png'
-flutter_icons:   # 追加
-  android: true  # 追加
-  ios: true      # 追加
-  image_path: "assets/images/icon.png" # 追加
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
