--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^1.0.4
   freezed_annotation: ^2.1.0
   json_annotation: ^4.7.0
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
